progress made on projects page and fix contrast issue on main footer

--- a/project/styles/base.css
+++ b/project/styles/base.css
@@ -161,6 +161,7 @@ footer {
     padding: 1rem;
     text-align: center;
     background-color: var(--paragraph-background-color);
+    color: var(--paragraph-color-on-color);
 }
 
 
